syntax = "proto3";
option go_package = "./pb";

package commerce_transactions;

// Service definition for managing transactions
service CommerceTransactions {
  // Create a new transaction
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  
  // Update an existing transaction
  rpc UpdateTransaction(UpdateTransactionRequest) returns (TransactionResponse);
  
  // Retrieve details of a specific transaction
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  
  // Delete a specific transaction
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse);
}

// Request message for creating a new transaction
message CreateTransactionRequest {
  int32 balance = 1; // Amount of balance
}

// Request message for updating an existing transaction
message UpdateTransactionRequest {
  string transaction_id = 1; // Unique identifier for the transaction
  int32 balance = 2; // New balance amount
}

// Request message for retrieving a transaction
message GetTransactionRequest {
  string transaction_id = 1; // Unique identifier for the transaction
}

// Request message for deleting a transaction
message DeleteTransactionRequest {
  string transaction_id = 1; // Unique identifier for the transaction to be deleted
}

// Response message for transaction operations
message TransactionResponse {
  bool success = 1; // Indicates if the operation was successful
  string message = 2; // Optional message providing additional information
  int32 balance = 3; 
  string transaction_id = 4; // Unique identifier for the transaction (returned for Create and Update operations)
}

// Response message for retrieving a transaction
message GetTransactionResponse {
  int32 balance = 1; // Balance amount of the transaction
  string transaction_id = 2; // Unique identifier for the transaction
}

// Response message for deleting a transaction
message DeleteTransactionResponse {
  bool success = 1; // Indicates if the deletion was successful
  string message = 2; // Optional message providing additional information
}



